deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cogfab
  annotations:
    cloud.google.com/backend-config: '{"default": "cogfab-backend"}'
spec:
  type: ClusterIP
  selector:
    app: cogfab
  ports:
    - port: 80
      targetPort: 8080
