deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cogfab
  annotations:
    # GKE Ingress needs a global address with this name. It is separate from
    # the regional address used by the production VM.
    kubernetes.io/ingress.global-static-ip-name: cogfab-ip
    networking.gke.io/managed-certificates: cogfab-cert
spec:
  defaultBackend:
    service:
      name: cogfab
      port:
        number: 80
